Fix some buttons not showing up correctly on Chrome

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -162,3 +162,8 @@ h2 {
     font-weight: bold;
     padding: 1px;
 }
+
+#homepage {
+    max-width: 80%;
+    margin: auto;
+}
